force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/BrillioFC__Force_Clinic_Log__c.object-meta.xml
<CustomObject>
    <label>Force Clinic Log</label>
    <nameField>
        <label>Force Clinic Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Force Clinic Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>