force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/fields/BrillioFC__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Line_Number__c</fullName>
    <label>Line Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>