force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/fields/BrillioFC__Message__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>