force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/fields/BrillioFC__Operation__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Operation__c</fullName>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>