force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/fields/BrillioFC__Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>