force-app/main/default/objects/BrillioFC__Force_Clinic_Log__c/listViews/BrillioFC__All.listView-meta.xml
<ListView>
    <fullName>BrillioFC__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>BrillioFC__Class_Name__c</columns>
    <columns>BrillioFC__Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>